--- a/Version_3_1_0/B.html
+++ b/Version_3_1_0/B.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
  <html lang="en"><head>
 	<meta charset="utf-8">
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
 	<meta name="author" content="Justice Vellacott">
 	<meta name="description" content="A Scripture app for viewing and studying the bible.">
 	<meta name="keywords" content="bible, study, bible study, religion &amp; spirituality, christianity, tools for bible study, bible study apps, study bible kjv, king james version, king james version study, kjv study, kjv study app, kjv search, kjv advanced search">
+	<link rel="manifest" href="./B_files/manifest.json">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>KJV</title>
